[gd_scene load_steps=15 format=3 uid="uid://b5bw37phe46ik"]

[ext_resource type="Script" path="res://Scripts/World.gd" id="1_ux20h"]
[ext_resource type="Environment" uid="uid://xwxsqngt4cnn" path="res://_Assets/World.tres" id="2_ap2k5"]
[ext_resource type="Texture2D" uid="uid://cicr6m8nn2qd4" path="res://_Assets/Textures/texture_07.png" id="3_625y5"]
[ext_resource type="Texture2D" uid="uid://bvg8p3t6q815" path="res://_Assets/Textures/texture_05.png" id="4_h85ug"]
[ext_resource type="Script" path="res://Scripts/FPS_Counter.gd" id="7_xel1g"]
[ext_resource type="Texture2D" uid="uid://dvqqflruxt06d" path="res://_Assets/Textures/kisspng-reticle.png" id="8_jwean"]
[ext_resource type="AudioStream" uid="uid://ofc62kl6b3s7" path="res://audio/music/Be Forest - Florence_NOT COMMERCIAL USE.mp3" id="9_gxi3i"]
[ext_resource type="Script" path="res://Scripts/PlayMenu.gd" id="15_xjmhj"]
[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="16_r1qkm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r3eg5"]
albedo_texture = ExtResource("3_625y5")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tv0qm"]
albedo_texture = ExtResource("4_h85ug")
uv1_triplanar = true

[sub_resource type="Animation" id="Animation_m7grl"]
resource_name = "MainScreenAnimation"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28144, 0)]
}

[sub_resource type="Animation" id="Animation_nxd5l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tdpfx"]
_data = {
"MainScreenAnimation": SubResource("Animation_m7grl"),
"RESET": SubResource("Animation_nxd5l")
}

[node name="World" type="Node3D"]
script = ExtResource("1_ux20h")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/player.tscn")
spawn_path = NodePath("..")
spawn_limit = 8

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = ExtResource("2_ap2k5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_color = Color(1, 1, 0.788235, 1)
light_energy = 1.2
light_indirect_energy = 10.0
light_volumetric_fog_energy = 10.0
light_angular_distance = 1.0
shadow_enabled = true
shadow_reverse_cull_face = true
shadow_opacity = 0.85

[node name="Stage" type="Node3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true
collision_layer = 255
collision_mask = 255
size = Vector3(50, 1, 50)
material = SubResource("StandardMaterial3D_r3eg5")

[node name="CSGBox3D2" type="CSGBox3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, -21.3619)
use_collision = true
collision_layer = 255
collision_mask = 255
size = Vector3(50, 1, 20)
material = SubResource("StandardMaterial3D_tv0qm")

[node name="CSGBox3D3" type="CSGBox3D" parent="Stage"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.9733, 0.812203, -19.3619)
use_collision = true
collision_layer = 255
collision_mask = 255
size = Vector3(20, 1, 20)
material = SubResource("StandardMaterial3D_tv0qm")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("16_r1qkm")

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]
follow_viewport_enabled = true

[node name="MainMenu" type="Control" parent="UI/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="UI/CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Archery Wars Clone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play_Button" type="Button" parent="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options_Button" type="Button" parent="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit_Button" type="Button" parent="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="PlayMenu" type="Control" parent="UI/CanvasLayer" node_paths=PackedStringArray("main_menu")]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("15_xjmhj")
main_menu = NodePath("../MainMenu")

[node name="MarginContainer" type="MarginContainer" parent="UI/CanvasLayer/PlayMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/PlayMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Label" type="Label" parent="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Play multiplayer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostGame_btn" type="Button" parent="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="External_IP" type="Label" parent="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "IP to join..."

[node name="Join" type="HBoxContainer" parent="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinGame_btn" type="Button" parent="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer/Join"]
layout_mode = 2
text = "Join Game"

[node name="IP_to_join" type="LineEdit" parent="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer/Join"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "IP"

[node name="Return" type="Button" parent="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return"

[node name="GameplayUI" type="Control" parent="UI/CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FPS_Counter" type="Label" parent="UI/CanvasLayer/GameplayUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.957
anchor_right = 1.0
anchor_bottom = 0.02
offset_left = 0.559937
offset_bottom = 0.399998
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 15
horizontal_alignment = 2
script = ExtResource("7_xel1g")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="UI/CanvasLayer/GameplayUI"]
custom_minimum_size = Vector2(16, 16)
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_jwean")
expand_mode = 1
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="Cam_Pivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Cam_Pivot"]
transform = Transform3D(-0.0145633, 0.490688, -0.871214, -0.0258456, 0.87083, 0.490904, 0.99956, 0.0296662, -3.8082e-08, -28.0659, 10.699, 3.14299)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Cam_Pivot/Camera3D")
libraries = {
"": SubResource("AnimationLibrary_tdpfx")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_gxi3i")
volume_db = -25.0
bus = &"Music"

[node name="Arrow_Holder" type="Node" parent="."]

[connection signal="pressed" from="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Play_Button" to="UI" method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Play_Button" to="UI/CanvasLayer/MainMenu" method="_on_play_button_pressed" flags=18]
[connection signal="pressed" from="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Options_Button" to="UI" method="_on_options_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Options_Button" to="UI/CanvasLayer/MainMenu" method="_on_options_button_pressed" flags=18]
[connection signal="pressed" from="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Quit_Button" to="UI" method="_on_quit_button_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Quit_Button" to="UI/CanvasLayer/MainMenu" method="_on_quit_button_pressed" flags=18]
[connection signal="pressed" from="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer/HBoxContainer/HostGame_btn" to="UI/CanvasLayer/PlayMenu" method="_on_host_game_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer/Join/JoinGame_btn" to="UI/CanvasLayer/PlayMenu" method="_on_join_game_pressed"]
[connection signal="pressed" from="UI/CanvasLayer/PlayMenu/MarginContainer/VBoxContainer/Return" to="UI/CanvasLayer/PlayMenu" method="_on_return_pressed"]
